Snapshot of version 1.1.6, from the github development master branch
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/pcaExplorer@121245 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/pcaExplorer.Rmd
+++ b/vignettes/pcaExplorer.Rmd
@@ -10,7 +10,8 @@ abstract: >
   `r Biocpkg("pcaExplorer")` provides functionality for interactive visualization of RNA-seq datasets
   based on Principal Components Analysis. Such methods allow for quick information 
   extraction and effective data exploration. A Shiny application encapsulates the whole analysis, and
-  is developed to become a practical companion for any RNA-seq dataset.
+  is developed to become a practical companion for any RNA-seq dataset. This app supports reproducible
+  research with state saving and automated report generation. 
 output: 
   BiocStyle::html_document:
     fig_caption: TRUE
@@ -19,7 +20,7 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}  
   %\VignettePackage{pcaExplorer}
-  %\VignetteKeywords{Visualization, RNASeq, DimensionReduction, PrincipalComponent, QualityControl, GUI}
+  %\VignetteKeywords{Visualization, RNASeq, DimensionReduction, PrincipalComponent, QualityControl, GUI, ReportWriting}
 ---
 
 <br>
@@ -50,6 +51,15 @@ source("http://bioconductor.org/biocLite.R")
 biocLite("pcaExplorer")
 ```
 
+If you prefer, you can install and use the development version, which can be retrieved via Github (https://github.com/federicomarini/pcaExplorer). To do so, use
+
+```{r installation-github, eval=FALSE}
+library("devtools")
+install_github("federicomarini/pcaExplorer")
+```
+
+
+
 Once `r Rpackage("pcaExplorer")` is installed, it can be loaded by the following command.
 
 ```{r loadlibrary, message=FALSE}
@@ -78,16 +88,30 @@ companion to any RNA-seq dataset analysis, making exploratory data analysis
 accessible also to the bench biologist, while providing additional insight also
 for the experienced data analyst.
 
+Starting from development version 1.1.3, `r Biocpkg("pcaExplorer")` supports reproducible 
+research with state saving and automated report generation. Each generated plot and table 
+can be exported by simple mouse clicks on the dedicated buttons.
+
+## Citation info
+
+If you use `r Biocpkg("pcaExplorer")` for your analysis, please cite it as here below:
+
+```{r}
+citation("pcaExplorer")
+```
+
+
+
 
 # Launching the application
 
 After loading the package, the `r Biocpkg("pcaExplorer")` app can be launched in different modes:
 
-- `pcaExplorer(dds = dds, rld = rld)`, where `dds` is a `DESeqDataSet` object and `rld` is a `DESeqTransform`
+- `pcaExplorer(dds = dds, rlt = rlt)`, where `dds` is a `DESeqDataSet` object and `rlt` is a `DESeqTransform`
 object, which were created during an existing session for the analysis of an RNA-seq
 dataset with the `r Biocpkg("DESeq2")` package
 
-- `pcaExplorer(dds = dds)`, where `dds` is a `DESeqDataSet` object. The `rld` object is automatically 
+- `pcaExplorer(dds = dds)`, where `dds` is a `DESeqDataSet` object. The `rlt` object is automatically 
 computed upon launch.
 
 - `pcaExplorer(countmatrix = countmatrix, coldata = coldata)`, where `countmatrix` is a count matrix, generated
@@ -112,7 +136,9 @@ exploiting the `goana` function, provided by the `r Biocpkg("limma")` package. A
 row names of the count matrix or `dds` object, and an extra column `gene_name`, containing e.g. HGNC-based 
 gene symbols. This can be used for making information extraction easier, as ENSEMBL ids (a usual choice when
 assigning reads to features) do not provide an immediate readout for which gene they refer to. This can be
-either passed as a parameter when launching the app, or also uploaded as a tab separated text file.
+either passed as a parameter when launching the app, or also uploaded as a tab separated text file. The package
+provides two functions, `get_annotation` and `get_annotation_orgdb`, as a convenient wrapper to obtain the updated
+annotation information, respectively from `biomaRt` or via the `org.XX.eg.db` packages.
 
 
 
@@ -123,10 +149,6 @@ either passed as a parameter when launching the app, or also uploaded as a tab s
 Most of the input controls are located in the sidebar, some are as well in the individual tabs of the app.
 By changing one or more of the input parameters, the user can get a fine control on what is displayed.
 
-## Data upload
-
-These **file input** controls are available when no `dds` or `countmatrix` + `coldata` are provided. Additionally,
-it is possible to upload the `annotation` data frame.
 
 ## App settings
 
@@ -147,6 +169,7 @@ should be used for mere visualization purposes
 - **Color palette** - Select the color palette to be used in the principal components plots. The number of colors 
 is selected automatically according to the number of samples and to the levels of the factors of interest
 and their interactions
+- **Plot style for gene counts** - Plot either boxplots or violin plots, with jittered points superimposed 
 
 ## Plot export settings        
 
@@ -154,6 +177,19 @@ and their interactions
 
 Additional controls available in the single tabs are also assisted by tooltips that show on hovering the mouse.
 Normally they are tightly related to the plot/output they are placed nearby.
+
+
+
+# The task menu
+
+The task menu, accessible by clicking on the cog icon in the upper right part of the application, provides two 
+functionalities:
+
+- `Exit pcaExplorer & save` will close the application and store the content of the `input` and `values` reactive 
+objects in two list objects made available in the global environment, called `pcaExplorer_inputs_YYYYMMDD_HHMMSS` and 
+`pcaExplorer_values_YYYYMMDD_HHMMSS`
+- `Save State as .RData` will similarly store `LiveInputs` and `r_data` in a binary file named
+`pcaExplorerState_YYYYMMDD_HHMMSS.Rdata`, without closing the application 
 
 
            
@@ -168,27 +204,48 @@ recent developments in the `r CRANpkg("shiny")` package/framework.
 
 The available panels are the described in the following subsections.
 
-## About
 
-Contains general information on `r Biocpkg("pcaExplorer")`, including the developer's contact, the link to
-the development version in Github, as well as the output of `sessionInfo`, to use for reproducibility sake - 
-or bug reporting.
 
+## Data Upload
+
+These **file input** controls are available when no `dds` or `countmatrix` + `coldata` are provided. Additionally,
+it is possible to upload the `annotation` data frame.
+
+When the objects are already passed as parameters, a brief overview/summary for them is displayed.
+
+<p align="center">
+<img src="newsnap_01_upload.png" style="width:800px;"/>
+</p>
 
 ## Instructions
 
 This is where you most likely are reading this text (otherwise in the package vignette). 
 
+<p align="center">
+<img src="newsnap_02_instructions.png" style="width:800px;"/>
+</p>
 
-## Data Preview
 
-This panel displays information on the objects in use, either passed as parameters or 
-generated from the count matrix provided. It also displays its metadata in an interactive
-table, along with an overview of the number of reads assigned to features (in the typical
-use case, genes) for each sample in form of a barplot and summary statistics.
+## Counts Table
+
+Interactive tables for the raw, normalized or (r)log-transformed counts are shown in this tab.
+The user can also generate a sample-to-sample correlation scatter plot with the selected data.
 
 <p align="center">
-<img src="snap_datapreview.png" style="width:800px;"/>
+<img src="newsnap_03_countstable.png" style="width:800px;"/>
+</p>
+
+
+## Data Overview
+
+This panel displays information on the objects in use, either passed as parameters or 
+generated from the count matrix provided. Displayed information comprise the design metadata,
+a sample to sample distance heatmap, the number of million of reads per sample and some
+basic summary for the counts.
+
+
+<p align="center">
+<img src="newsnap_04_overview.png" style="width:800px;"/>
 </p>
 
 ## Samples View
@@ -196,10 +253,11 @@ use case, genes) for each sample in form of a barplot and summary statistics.
 This panel displays the PCA projections of sample expression profiles onto any pair of components,
 a scree plot, a zoomed PCA plot, a plot of the genes with top and bottom loadings. Additionally, this section 
 presents a PCA plot where it is possible to remove samples deemed to be outliers in the analysis, which is 
-very useful to check the effect of excluding them.
+very useful to check the effect of excluding them. If needed, an interactive 3D visualization of the principal 
+components is also available.
 
 <p align="center">
-<img src="snap_pcasamples.png" style="width:800px;"/>
+<img src="newsnap_05_samples.png" style="width:800px;"/>
 </p>
 
 
@@ -208,10 +266,11 @@ very useful to check the effect of excluding them.
 This panel displays the PCA projections of genes abundances onto any pair of components, with samples
 as biplot variables, to identify interesting groups of genes. Zooming is also possible, and clicking on single
 genes, a boxplot is returned, grouped by the factors of interest. A static and an interactive heatmap are 
-provided, including the subset of selected genes. These are also reported in `datatable` objects.
+provided, including the subset of selected genes, also displayed as (standardized) expression profiles across the 
+samples. These are also reported in `datatable` objects, accessible in the bottom part of the tab.
 
 <p align="center">
-<img src="snap_pcagenes.png" style="width:800px;"/>
+<img src="newsnap_06_genes.png" style="width:800px;"/>
 </p>
 
 
@@ -219,10 +278,12 @@ provided, including the subset of selected genes. These are also reported in `da
 
 The user can search and display the expression values of a gene of interest, either by ID or gene
 name, as provided in the `annotation`. A handy panel for quick screening of shortlisted genes, again grouped by
-the factors of interest. The graphic can be readily exported as it is.
+the factors of interest. The graphic can be readily exported as it is, and this can be iterated on a shortlisted
+set of genes. For each of them, the underlying data is displayed in an interactive table, also exportable with a 
+click.
 
 <p align="center">
-<img src="snap_genefinder.png" style="width:800px;"/>
+<img src="newsnap_07_finder.png" style="width:800px;"/>
 </p>
 
 ## PCA2GO
@@ -233,7 +294,7 @@ that can otherwise provided as a parameter when launching the app. The panel dis
 samples, surrounded on each side by the tables with the functions enriched in each component and direction.
 
 <p align="center">
-<img src="snap_pca2go.png" style="width:800px;"/>
+<img src="newsnap_08_pca2go.png" style="width:800px;"/>
 </p>
 
 ## Multifactor Exploration
@@ -255,11 +316,42 @@ according to their behavior on the Principal Components subspaces. Zooming and e
 allowed by brushing on the main plot.
 
 <p align="center">
-<img src="snap_multifac.png" style="width:800px;"/>
+<img src="newsnap_09_multifac.png" style="width:800px;"/>
 </p>
 
 
-# `pcaExplorer` on published datasets
+## Report Editor
+
+The report editor is the backbone for generating and editing the interactive report on the basis of the 
+uploaded data and the current state of the application. General `Markdown options` and `Editor options`
+are available, and the text editor, based on the `shinyAce` package, contains a comprehensive template 
+report, that can be edited to the best convenience of the user.
+
+The editor supports R code autocompletion, making it easy to add new code chunks for additional sections.
+A preview is available in the tab itself, and the report can be generated, saved and subsequently shared 
+with simple mouse clicks.
+
+<p align="center">
+<img src="newsnap_10_editor.png" style="width:800px;"/>
+</p>
+
+
+## About
+
+Contains general information on `r Biocpkg("pcaExplorer")`, including the developer's contact, the link to
+the development version in Github, as well as the output of `sessionInfo`, to use for reproducibility sake - 
+or bug reporting. Information for citing `r Biocpkg("pcaExplorer")` is also reported.
+
+<p align="center">
+<img src="newsnap_11_about.png" style="width:800px;"/>
+</p>
+
+
+
+
+
+
+# Running `pcaExplorer` on published datasets
 
 We can run `r Biocpkg("pcaExplorer")` for demonstration purpose on published datasets that are available as SummarizedExperiment
 in an experiment Bioconductor packages.
@@ -309,17 +401,42 @@ annotation_airway <- data.frame(gene_name = genenames_airway,
 head(annotation_airway)                                
 ```
 
+or alternatively, by using the `get_annotation` or `get_annotation_orgdb` wrappers.
+
+```{r annofuncs, eval=FALSE}
+
+anno_df_orgdb <- get_annotation_orgdb(dds = dds_airway,
+                                      orgdb_species = "org.Hs.eg.db",
+                                      idtype = "ENSEMBL")
+
+anno_df_biomart <- get_annotation(dds = dds_airway,
+                                  biomart_dataset = "hsapiens_gene_ensembl",
+                                  idtype = "ensembl_gene_id")
+
+```
+
+```{r echo=FALSE}
+anno_df_orgdb <- get_annotation_orgdb(dds = dds_airway,
+                                      orgdb_species = "org.Hs.eg.db",
+                                      idtype = "ENSEMBL")
+```
+
+```{r}
+head(anno_df_orgdb)
+```
+
+
 Then again, the app can be launched with 
 
 ```{r launchairwayanno, eval=FALSE}
 pcaExplorer(dds = dds_airway,
             rlt = rld_airway,
-            annotation = annotation_airway)
+            annotation = annotation_airway) # or anno_df_orgdb, or anno_df_biomart
 ```
 
 If desired, alternatives can be used. See the well written annotation workflow available at the Bioconductor site (https://bioconductor.org/help/workflows/annotation/annotation/).
 
-# `pcaExplorer` on synthetic datasets
+# Running `pcaExplorer` on synthetic datasets
 
 For testing and demonstration purposes, a function is also available to generate synthetic datasets whose counts
 are generated based on two or more experimental factors.
@@ -361,6 +478,8 @@ provided the required objects are in the working environment. They are listed he
 but please refer to the documentation for additional details. Where possible, for each function a code 
 snippet will be provided for its typical usage.
 
+
+
 ## `pcaplot`
 
 `pcaplot` plots the sample PCA for `DESeqTransform` objects, such as rlog-transformed data. This is 
@@ -372,8 +491,20 @@ pcaplot(rld_airway,intgroup = c("cell","dex"),ntop = 1000,
 
 # on a different set of principal components...
 pcaplot(rld_airway,intgroup = c("dex"),ntop = 1000,
-        pcX = 3, pcY = 4, title = "airway dataset PCA on samples - PC3 vs PC4")
+        pcX = 1, pcY = 4, title = "airway dataset PCA on samples - PC1 vs PC4",
+        ellipse = TRUE)
 
+```
+
+
+## `pcaplot3d`
+
+Same as for `pcaplot`, but it uses the `threejs` package for the 3d interactive view.
+
+```{r func-pcaplot3d, eval=FALSE}
+pcaplot3d(rld_airway,intgroup = c("cell","dex"),ntop = 1000,
+        pcX = 1, pcY = 2, pcZ = 3)
+# will open up in the viewer
 ```
 
 
@@ -494,7 +625,14 @@ pca2go_airway <- pca2go(rld_airway,
                         ensToGeneSymbol = TRUE,
                         background_genes = bg_ids)
 # for a smooth interactive exploration, use DT::datatable
-datatable(pca2go_airway)
+datatable(pca2go_airway$PC1$posLoad)
+# display it in the normal R session...
+head(pca2go_airway$PC1$posLoad)
+# ... or use it for running the app and display in the dedicated tab
+pcaExplorer(dds_airway,rld_airway,
+            pca2go = pca2go_airway,
+            annotation = annotation_airway)
+
 ```
 
 
@@ -539,6 +677,63 @@ pcaplot(rld_simu,intgroup = c("condition","tissue")) +
 pcaplot(rld2_simu,intgroup = c("condition","tissue")) + 
   ggplot2::ggtitle("Simulated data - Small condition effect, bigger tissue effect")
 ```
+
+
+## `distro_expr`
+
+Plots the distribution of expression values, either with density lines, boxplots or 
+violin plots.
+
+```{r eval=FALSE}
+distro_expr(rld_airway,plot_type = "density")
+distro_expr(rld_airway,plot_type = "violin")
+```
+
+```{r}
+distro_expr(rld_airway,plot_type = "boxplot")
+```
+
+
+## `geneprofiler` 
+
+Plots the profile expression of a subset of genes, optionally as standardized values
+
+```{r}
+dds <- makeExampleDESeqDataSet_multifac(betaSD_condition = 3,betaSD_tissue = 1)
+rlt <- DESeq2::rlogTransformation(dds)
+set.seed(42)
+geneprofiler(rlt,paste0("gene",sample(1:1000,20)), plotZ = FALSE)
+```
+
+
+## `get_annotation` and `get_annotation_orgdb`
+
+These two wrapper functions retrieve the latest annotations for the `dds` object, to be
+used in the call to the `pcaExplorer` function. They use respectively the `biomaRt` package
+and the `org.XX.eg.db` packages.
+
+```{r eval=FALSE}
+anno_df_biomart <- get_annotation(dds = dds_airway,
+                                  biomart_dataset = "hsapiens_gene_ensembl",
+                                  idtype = "ensembl_gene_id")
+
+anno_df_orgdb <- get_annotation_orgdb(dds = dds_airway,
+                                      orgdb_species = "org.Hs.eg.db",
+                                      idtype = "ENSEMBL")
+```
+
+
+## `pair_corr`
+
+Plots the pairwise scatter plots and computes the correlation coefficient on the 
+expression matrix provided.
+
+```{r}
+# use a subset of the counts to reduce plotting time, it can be time consuming with many samples
+pair_corr(counts(dds_airway)[1:100,])
+```
+
+
 
 
 # Further development
