accordingly editing and updating the news

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+CHANGES IN VERSION 1.99.0
+-------------------------
+
+OTHER NOTES
+
+    o Reflecting the major feature added, will trigger a major version number bump. Welcome soon, 
+    pcaExplorer 2.0.0!
+
+
 CHANGES IN VERSION 1.1.5
 -------------------------
 
