--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,20 @@
+CHANGES IN VERSION 2.2.0
+------------------------
+
+NEW FEATURES
+
+    o Added Demo data, loadable via demo button
+
+BUG FIXES
+
+    o Plots work now without cutting out points when zooming in
+
+OTHER NOTES
+
+    o Saved reactive values are now exported to dedicate environments (instead of assigning to global)
+
+
+
 CHANGES IN VERSION 1.99.0
 -------------------------
 
