--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+CHANGES IN VERSION 2.8.0
+------------------------
+
+NEW FEATURES
+
+    o PCA plots now are correctly generated with fixed coordinates
+
 CHANGES IN VERSION 2.6.0
 ------------------------
 
